윈도우용 NIC감지코드 수정